public/css/default.css
* {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

#header {
    font: 40pt sans-serif;
}

#main-content {
    width: 80%;
    float: left;
}

#side-content {
    width: 20%;
    float: right;
}

#side-content > div {
    margin: 10px;
}

.story-headline {
    font: 20pt serif;
}

a {
    color: #267FD9;
}
.story-headline a {
    text-decoration: none;
}

.story-byline {
    font-size: 13px;
    color: #A2A2A2;
}

.story-full {
    margin-top: 1em;
    color: #505050;
}

.story-excerpt {
    margin: 1em 0;
    color: #505050;
}

.story-readmore {
    display: block;
    text-decoration: none;
}

.homepage-story-container {
    border-right: 1px solid #eee;
    border-bottom: 1px solid #eee;
    padding-top: 1em;
    padding-bottom: 1em;
}

.hidden {
    display: none;
}

#show-more-articles, #show-more-firehose-items {
    margin: 1em;
    text-align: center;
}

.firehose-item-twitter, .firehose-item-link {
    margin: 1em 1em 2em 1em;
    font-size: 10pt;
}

.firehose-item-author {
    text-align: right;
    margin-top: 0.2em;
    color: gray;
}

.firehose-item-title {
    font-weight: bold;
    margin-bottom: 0.1em;
}

